--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
                 <div class="spacer1"></div>
                 <h2>How It Works</h2>
             </div>
-            <div class="col-12 col-sm-12 col-md-6">
+            <div class="col-12 col-sm-12 col-md-8">
                 <div class="spacer2"></div>
+                <img src="arrow.png" alt="How It Works" class="arrow">
                 <h3>Setting up a VR Hub</h3>
                 <p>A Face-to-face course involves accessing VR Games, masterclasses face to face and accessing guided content while a structure timetable.
                 <br><br>
